@@ -62,18 +62,18 @@ struct PointCloud
 	inline size_t kdtree_get_point_count() const { return pts.size(); }
 
 	// Returns the distance between the vector "p1[0:size-1]" and the data point with index "idx_p2" stored in the class:
-	inline float kdtree_distance(const float *p1, const size_t idx_p2,size_t size) const
+	inline T kdtree_distance(const T *p1, const size_t idx_p2,size_t size) const
 	{
-		float d0=p1[0]-pts[idx_p2].x;
-		float d1=p1[1]-pts[idx_p2].y;
-		float d2=p1[2]-pts[idx_p2].z;
+		const T d0=p1[0]-pts[idx_p2].x;
+		const T d1=p1[1]-pts[idx_p2].y;
+		const T d2=p1[2]-pts[idx_p2].z;
 		return d0*d0+d1*d1+d2*d2;
 	}
 
 	// Returns the dim'th component of the idx'th point in the class:
 	// Since this is inlined and the "dim" argument is typically an immediate value, the
 	//  "if/else's" are actually solved at compile time.
-	inline float kdtree_get_pt(const size_t idx, int dim) const
+	inline T kdtree_get_pt(const size_t idx, int dim) const
 	{
 		if (dim==0) return pts[idx].x;
 		else if (dim==1) return pts[idx].y;
@@ -153,6 +153,9 @@ void L2_vs_L2_simple_test(const size_t N, const size_t num_results)
 TEST(kdtree,L2_vs_L2_simple)
 {
 	for (int nResults=1;nResults<10;nResults++)
+	{
 		L2_vs_L2_simple_test<float>(100, nResults);
+		L2_vs_L2_simple_test<double>(100, nResults);
+	}
 }
 
